--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 .idea/sonarlint/issuestore
 target
 tmp
+**/.settings
+**/.classpath
+**/.project
 
 # blockFrom: https://raw.githubusercontent.com/github/gitignore/master/Global/JetBrains.gitignore with: AutoImport
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
