--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
     <groupId>org.abego.commons</groupId>
     <artifactId>abego-commons-swing</artifactId>
-    <version>0.10.0-SNAPSHOT</version>
+    <version>0.10.0</version>
 
     <parent>
         <groupId>org.sonatype.oss</groupId>
@@ -56,8 +56,8 @@
 
         <!-- version infos -->
         <abego-commons-swing.version>${project.version}</abego-commons-swing.version>
-        <abego-commons-base.version>0.10.0-SNAPSHOT</abego-commons-base.version>
-        <abego-commons-test.version>0.10.0-SNAPSHOT</abego-commons-test.version>
+        <abego-commons-base.version>0.10.0</abego-commons-base.version>
+        <abego-commons-test.version>0.10.0</abego-commons-test.version>
         <jacoco-maven-plugin.version>0.8.3</jacoco-maven-plugin.version>
         <junit-jupiter.version>5.3.2</junit-jupiter.version>
         <junit-platform-surefire-provider.version>1.1.0</junit-platform-surefire-provider.version>
