--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
     <groupId>org.abego.commons</groupId>
     <artifactId>abego-commons-swing</artifactId>
-    <version>0.10.0</version>
+    <version>0.11.0-SNAPSHOT</version>
 
     <parent>
         <groupId>org.sonatype.oss</groupId>
