--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ tmp
 **/.settings
 **/.classpath
 **/.project
+.idea/git_toolbox_prj.xml
+.idea/jpa-buddy.xml
 
 # blockFrom: https://raw.githubusercontent.com/github/gitignore/master/Global/JetBrains.gitignore with: AutoImport
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
