--- a/pom.xml
+++ b/pom.xml
@@ -90,8 +90,8 @@
 
         <!-- version infos -->
         <abego-commons-swing.version>${project.version}</abego-commons-swing.version>
-        <abego-commons-base.version>0.12.0-SNAPSHOT</abego-commons-base.version>
-        <abego-commons-test.version>0.12.0-SNAPSHOT</abego-commons-test.version>
+        <abego-commons-base.version>0.12.0</abego-commons-base.version>
+        <abego-commons-test.version>0.12.0</abego-commons-test.version>
         <jacoco-maven-plugin.version>0.8.3</jacoco-maven-plugin.version>
         <junit-jupiter.version>5.3.2</junit-jupiter.version>
         <junit-platform-surefire-provider.version>1.1.0</junit-platform-surefire-provider.version>
