--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
     <groupId>org.abego.commons</groupId>
     <artifactId>abego-commons-swing</artifactId>
-    <version>0.12.0-SNAPSHOT</version>
+    <version>0.12.0</version>
 
     <name>abego Commons Swing</name>
     <description>Simplified Java Swing development with abego Commons Swing</description>
